# internal/infrastructure/persistence/gorm/store.go
@@ -107,6 +107,15 @@ func (s *Store) AutoMigrate() error {
 			&persistencemodels.StoryTick{},
 			&persistencemodels.StoryStateVersion{},
 			&persistencemodels.StoryTickStateRef{},
+			&persistencemodels.StoryTimeline{},
+			&persistencemodels.StoryTickRun{},
+			&persistencemodels.WorldMap{},
+			&persistencemodels.MapTile{},
+			&persistencemodels.LocationState{},
+			&persistencemodels.FactionInfluence{},
+			&persistencemodels.CharacterSimulationState{},
+			&persistencemodels.SimulationEvent{},
+			&persistencemodels.SimulationSnapshot{},
 		},
 		{
 			&persistencemodels.DialogueSession{},
